--- a/scss/Style.scss
+++ b/scss/Style.scss
@@ -151,7 +151,7 @@ body{
     .mob_img_container{
         width: 100%;
         height: 270px;
-        background-image: url('/images/hero-mobile.jpg');
+        background-image: url('../../images/hero-mobile.jpg');
         background-position: right;
         background-repeat: no-repeat;
         background-size: cover;
@@ -193,7 +193,7 @@ body{
         padding-left: 65px;
         padding-right: 15%;
 
-        background-image: url('/images/bg-pattern-desktop.svg');
+        background-image: url('../../images/bg-pattern-desktop.svg');
         background-repeat: no-repeat;
         background-position: top;
         background-size: cover;
@@ -211,7 +211,7 @@ body{
     .img_container{
         width: 100%;
         height: inherit;
-        background-image: url('images/hero-desktop.jpg');
+        background-image: url('../../images/hero-desktop.jpg');
         background-position: center;
         background-repeat:repeat;
         background-size: cover;
